# grader_helper

./: .gitignore  README.md  TODO.md  __init__.py  old__init__.py  pyproject.toml  tree.txt
.github/workflows/: python-publish.yml
grader_helper/: .gitignore  __init__.py  ask_to_rename.py  dependencies.py  distribute_feedback_sheets.py  distribute_graders_groups.py  distribute_graders_individual.py  is_already_renamed.py  load_graders.py  rename_folders.py  save_distributed_graders.py
grader_helper/assignment/: __init__.py  assign_graders_groups.py  assign_graders_individual.py  find_unsubmitted.py  visualise.py
grader_helper/calculations/: __init__.py  make_letter_grade.py
grader_helper/dataframe_operations/: __init__.py  calculate_total_module_score.py  calculate_weighted_score.py  check_for_weighted_columns.py  prepare_data_for_departmental_template.py
grader_helper/file_operations/: __init__.py  alphabetise_folders.py  brightspace_name_folders.py  catch_grades.py  distribute_feedback_sheets.py  extract_studentid_grade.py  process_grade_file.py  rename_folders.py  save_distributed_graders.py  save_grader_sheets.py  scan_multiple_submissions.py
grader_helper/ingesting/: __init__.py  import_brightspace_classlist.py  ingest_completed_graderfiles.py
grader_helper/models/: module.py
old_src/dataframe_operations/: __init__.py  calculate_total_module_score.py  make_letter_grade.py  prepare_data_for_departmental_template.py
old_src/file_operations/: __init__.py  save_grader_sheets.py
old_src/ingesting/: __init__.py  load_graders.py
src/: __init__.py  dependencies.py
src/assignment/: __init__.py  assign_graders_individual.py
src/dataframe_operations/: sort_order_columns.py
src/file_operations/: alphabetise_folders.py  catch_grades.py  distribute_feedback_sheets.py  save_distributed_graders.py
src/grader_helper/: __init__.py  dependencies.py
src/grader_helper/exporting/: __init__.py  write_course_yaml.py  (+1 more)
src/models/: Course.py  CourseWork.py  Documents.py  __init__.py  init.py  module.py
src/tests/: coursework_test.py
tests/: conftest.py  course_test.py  coursework_test.py  guess_type_test.py  path_catcher_test.py  testit.ipynb  yaml_io_test.py
tests/output/: test_course_config.yaml  test_module_config.yaml
tests/resources/: 0001_config.yaml  fake_class_list.xlsx  full_course_example.yaml  graders.txt  minimal_cw_yaml.yaml  minimal_yaml.yaml  test_course_config.yaml
(+12 files in other folders)
