[project]
name = "grader-helper"
version = "0.1.10"
description = "Functions to help manage assignments from UL which are hosted on Brightspace"
authors = [{name = "Kevin O Malley", email = "kevomalley743@gmail.com"}]
license = "MIT"
readme = "README.md"
packages = [{include = "grader_helper"}]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "xlwings>=0.33.5",
]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "sphinx>=8.1.3",
]
