
[project]
name = "grader-helper"
version = "0.1.11"
description = "Functions to help manage assignments from UL which are hosted on Brightspace"
description-content-type = "text/markdown"
authors = [{name = "Kevin O Malley", email = "kevomalley743@gmail.com"}]
license = "MIT"
readme = "README.md"
packages = [{include = "grader_helper"}]
dependencies = [
    "faker>=37.4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-calamine>=0.4.0",
    "randomtimestamp>=2.3",
    "tqdm>=4.67.1",
    "xlwings>=0.33.5",
]
requires-python = ">3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.envs.default]
dependencies = [
    "black>=24.10.0",
    "sphinx>=8.1.3",
]


[tool.hatch.build.targets.wheel]
packages = ["grader_helper"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

